r2e-compile-tests/cases/decorators/fail/guard_sse_path_symbol_unknown.stderr
error[E0425]: cannot find value `missing` in module `path`
  --> cases/decorators/fail/guard_sse_path_symbol_unknown.rs:35:39
   |
35 |     #[guard(StreamGuard::viewer(path::missing))]
   |                                       ^^^^^^^ not found in `path`
